Avoid toggling app list if interrupted by mouse

If mouse press/release occurs between search key down and up, avoid
toggling app list. This is helpful when user is chromoting from chromeos
to other system which uses 'Win+Click' as a gesture.

BUG=665897
TEST=
ash_unittests --gtest_filter=
'AcceleratorControllerTest.GlobalAcceleratorsToggleAppList'
ash_unittests --gtest_filter=
'AcceleratorFilterTest.ToggleAppListInterruptedByMouseEvent'

Review-Url: https://codereview.chromium.org/2923723002
Cr-Commit-Position: refs/heads/master@{#485107}

Former-commit-id: 272d1bb23336c996a82630c0711c19d94a480ad0