ui/wm/core/accelerator_filter.h
@@ -30,6 +30,7 @@ class WM_CORE_EXPORT AcceleratorFilter : public ui::EventHandler {
 
   // Overridden from ui::EventHandler:
   void OnKeyEvent(ui::KeyEvent* event) override;
+  void OnMouseEvent(ui::MouseEvent* event) override;
 
  private:
   std::unique_ptr<AcceleratorDelegate> delegate_;
